omely-backend/error.txt
file:///C:/Users/kespa/Desktop/omelywebsitestage1/omely-backend/queue.js:765
    ContentDetector,
    ^^^^^^^^^^^^^^^

SyntaxError: Duplicate export of 'ContentDetector'
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:536:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:583:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:162:19)

Node.js v22.18.0
